--- a/_layouts/agenda-2.html
+++ b/_layouts/agenda-2.html
@@ -530,9 +530,9 @@ function loaded() {
 {% for item in site.gigs %}
 
    <tr>
-       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;">{{ item.date | date: "%d %b %Y" }}</td>
-       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;">{{ item.location }}</td>
-       <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px;"><a href="{{ item.url }}" target="_blank">read more</a></td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;" >{{ item.date | date: "%d %b %Y" }}</td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;">{{ item.title }}</td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px;"><a href="{{ item.url }}" target="_blank">{{ item.location }}</a></td>
     </tr>
    
 {% endfor %}
