--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -619,7 +619,7 @@ $(document).ready(function() {
    <tr>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;" >{{ item.date | date: "%d %b %Y" }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;">{{ item.title }}</td>
-       <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px;"><b>{{ item.location }}</b><br /><a href="{{ item.url }}" target="_blank">{{ item.venue }}</a></td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px;">{{ item.location }}<br /><a href="{{ item.url }}" target="_blank">{{ item.venue }}</a></td>
     </tr>
    
 {% endfor %}
