Updated '_layouts/agenda.html' via CloudCannon

--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -613,7 +613,7 @@ $(document).ready(function() {
     font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
     class="wysiwyg growpage"><!-- InstanceBeginEditable name="content971" -->
 
-<table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%; font-size: 70%;">
+<table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%;">
 {% for item in site.gigs %}
 
    <tr>
