--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -617,8 +617,8 @@ $(document).ready(function() {
 {% for item in site.gigs %}
 
    <tr>
-       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;" >{{ item.date | date: "%d %b %Y" }}</td>
-       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px;"><a href="{{ item.url }}" target="_blank">{{ item.venue }}</a><br />{{ item.title }}</td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; white-space: nowrap;" >{{ item.date | date: "%d %b %Y" }}</td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><a href="{{ item.url }}" target="_blank">{{ item.venue }}</a><br />{{ item.title }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px; white-space: nowrap;">{{ item.location }}</td>
     </tr>
    
