--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -618,7 +618,7 @@ $(document).ready(function() {
 
    <tr>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; white-space: nowrap;" >{{ item.date | date: "%d %b %Y" }}</td>
-       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><a href="{{ item.url }}" target="_blank">{{ item.venue }}</a><br />{{ item.title }}</td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><a href="{{ item.url }}" target="_blank" style="font-weight: 600px; text-decoration: none;">{{ item.venue }}</a><br />{{ item.title }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px; white-space: nowrap;">{{ item.location }}</td>
     </tr>
    
