--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -619,7 +619,7 @@ $(document).ready(function() {
    <tr>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; white-space: nowrap;" ><span style="font-weight: 600;">{{ item.date | date: "%a" }}</span><br />{{ item.date | date: "%d %b" }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><a href="{{ item.url }}" target="_blank" style="font-weight: 600; text-decoration: none;">{{ item.venue }}</a><br />{{ item.title }}</td>
-       <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px; white-space: nowrap;">{{ item.location }}</td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px; white-space: nowrap;"><span style="font-weight: 600;">{{ item.location }}</span><br />{{ item.date | date: "%I:%M %p" }}</td>
     </tr>
    
 {% endfor %}
