--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -616,9 +616,9 @@ $(document).ready(function() {
 <table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%;">
 {% for item in site.gigs %}
 
-   <tr>
+   <tr style="cursor: pointer;" onclick="window.open('{{ item.url }}');">
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: left; white-space: nowrap;" >{{ item.date | date: "%d %b" }}</td>
-       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><a href="{{ item.url }}" target="_blank" style="font-weight: 600; text-decoration: none;">{{ item.venue }}</a><br />{{ item.title }}</td>
+       <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><span style="font-weight: 600;">{{ item.venue }}</span><br />{{ item.title }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px; text-align: right; white-space: nowrap;">{{ item.location }}</td>
     </tr>
    
