Updated '_layouts/agenda-2.html' via CloudCannon

--- a/_layouts/agenda-2.html
+++ b/_layouts/agenda-2.html
@@ -526,7 +526,7 @@ function loaded() {
     font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
     class="wysiwyg growpage"><!-- InstanceBeginEditable name="content1410" -->
 
-<table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%; font-size: 85%;">
+<table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%; font-size: 85%; line-height: 27px;">
 {% for item in site.gigs %}
 
    <tr style="cursor: pointer;" onclick="window.open('{{ item.url }}');">
