--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -616,7 +616,7 @@ $(document).ready(function() {
 <table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%;">
 {% for item in site.gigs %}
 
-   <tr style="cursor: pointer;" onclick="window.open('{{ item.url }}');">
+   <tr style="cursor: pointer;" {% if item.url %}onclick="window.open('{{ item.url }}');"{% endif %}>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: left; white-space: nowrap;" >{{ item.date | date: "%d %b" }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><span style="font-weight: 600;">{{ item.venue }}</span><br />{{ item.title }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px; text-align: right; white-space: nowrap;">{{ item.location }}</td>
