--- a/_layouts/agenda-2.html
+++ b/_layouts/agenda-2.html
@@ -529,7 +529,7 @@ function loaded() {
 <table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%; font-size: 85%; line-height: 27px;">
 {% for item in site.gigs %}
 
-   <tr style="cursor: pointer;" onclick="window.open('{{ item.url }}');">
+   <tr {% if item.url!='' %}style="cursor: pointer;" onclick="window.open('{{ item.url }}');"{% endif %}>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: left; white-space: nowrap;" >{{ item.date | date: "%d %b" }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: center; "><span style="font-weight: 600;">{{ item.venue }}</span><br />{{ item.title }}</td>
        <td style="border-top: 1px solid #ccc; padding: 5px 0px 5px 0px; text-align: right; white-space: nowrap;">{{ item.location }}</td>
