--- a/_layouts/agenda.html
+++ b/_layouts/agenda.html
@@ -614,7 +614,8 @@ $(document).ready(function() {
     class="wysiwyg growpage"><!-- InstanceBeginEditable name="content971" -->
 
 <table cellpadding="0" cellspacing="0" style="border-bottom: 1px solid #ccc; width: 100%;">
-{% for item in site.gigs %}
+{% assign sorted = (site.gigs | sort: 'date') | reverse %}
+{% for item in sorted %}
 
    <tr {% if item.url!='' %}style="cursor: pointer;" onclick="window.open('{{ item.url }}');"{% endif %}>
        <td style="border-top: 1px solid #ccc; padding: 5px 20px 5px 0px; text-align: left; white-space: nowrap;" >{{ item.date | date: "%d %b" }}</td>
